# SJTU-MAI-SpaceEngineering

./: README.md
0_PreExamMAI/: 9-17.md  MAIExamPreEntering.docx  README.md
1_Courses/DialecticsNature/: 我的答案准备.md
1_Courses/MatrixAnalysis/: README.md
1_Courses/MatrixAnalysis/homework1/: README.md
1_Courses/MatrixAnalysis/homework2/: README.md
1_Courses/MatrixAnalysis/homework3/: README.md
1_Courses/NavigationPrinciple/: README.md
1_Courses/NavigationPrinciple/homework2/: CMakeLists.txt  CoordinateConvertor.cc  CoordinateConvertor.h  README.md  main.cpp
1_Courses/NumericalAnalysis/: MatrixPractice.ipynb  README.md
1_Courses/OptimizationMethod/: README.md
1_Courses/OptimizationMethod/homework2/: CMakeLists.txt  README.md  main.cpp  test_find_mosek.py
1_Courses/OptimizationMethod/homework2/cmake_modules/: FindMOSEK.cmake
1_Courses/OptimizationMethod/homework2/cmake_modules/backup_config/: FindMOSEK.cmake
1_Courses/OptimizationMethod/homework2/scripts/: control2.py  test_find_mosek.py
1_Courses/OptimizationMethod/homework2/src/: ExampleQuadConstrains.cc
1_Courses/OptimizationMethod/line_search/: CMakeLists.txt  ExactSearcher.cc  ExactSearcher.h  InexactSearcher.cc  InexactSearcher.h  README.md  main.cpp  useCeres.cc
1_Courses/OptimizationMethod/line_search/examples/: armijo.m  example2_1.m  example2_2.m  example2_3.m  fun.m  gfun.m  golds.m  qmin.m
1_Courses/SolidMechanics/: README.md
1_Courses/SpaceSystemEngineering/: README.md  homework2.docx
2_Articles/: FastLab.md  README.md
homework1-by-ZhangYuxuan/: time_system.py
(+67 files in other folders)
